Fixed Alignment

--- a/flask_app/static/css/index_style.css
+++ b/flask_app/static/css/index_style.css
@@ -25,7 +25,7 @@
 .second-column{
     display: flex;
     flex-direction: column;
-    float: center;
+    align-items: center;
     width: 20%;
     padding: 15px;
     margin-top: 7px;
