--- a/flask_app/static/css/skill_style.css
+++ b/flask_app/static/css/skill_style.css
@@ -31,7 +31,7 @@
 .second-column{
     display: flex;
     flex-direction: column;
-    float: left;
+    align-items: center;
     width: 20%;
     padding: 15px;
     margin-top: 7px;
